force-app/main/default/objects/Case/fields/Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Closed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who closed this Case record.</description>
    <inlineHelpText>User who closed this Case record.</inlineHelpText>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Closed_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>