force-app/main/default/objects/Case/fields/Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error__c</fullName>
    <description>TBC</description>
    <inlineHelpText>TBC</inlineHelpText>
    <label>Integration Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>