force-app/main/default/objects/Case/fields/Integration_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Job_Id__c</fullName>
    <description>Apex Job Id for the job executing.</description>
    <inlineHelpText>Apex Job Id for the job executing.</inlineHelpText>
    <label>Integration Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>