force-app/main/default/objects/Case/fields/Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Secret_Key__c</fullName>
    <description>TBC</description>
    <inlineHelpText>TBC</inlineHelpText>
    <label>Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>